--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <style>
 body{
 margin:0;font-family:'Cairo',sans-serif;
-background:#001a00;
-color:#00ff7f;
-transition:0.5s;
+background:#001a00;color:#00ff7f;transition:0.5s;
 }
 header{text-align:center;padding:20px;border-bottom:1px solid #00ff7f33;}
 button{background:#000;color:#00ff7f;border:1px solid #00ff7f;padding:6px 14px;border-radius:8px;cursor:pointer;margin:3px;transition:0.3s;}
@@ -29,7 +27,7 @@ textarea:hover{transform:scale(1.02);}
 100%{background:#ff4d4d;width:100%;}
 }
 .log{max-height:150px;overflow:auto;font-size:12px;background:#0a0a0a;padding:10px;border-radius:10px;}
-.alertMode{animation:alertPulse 1s infinite; color:#ff4d4d!important;}
+.alertMode{animation:alertPulse 1s infinite;color:#ff4d4d!important;}
 @keyframes alertPulse{
 0%{background:#330000;}
 50%{background:#550000;}
@@ -39,6 +37,7 @@ footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ff7
 </style>
 </head>
 <body>
+
 <header>
 <h1>🦅 BlackFalcon SOC™</h1>
 <p id="subtitle">Advanced SOC Simulation Platform</p>
@@ -83,12 +82,13 @@ let lang="en";
 let stats={safe:0,medium:0,high:0};
 let debounceTimer=null;
 
+// نصوص عربي وانجليزي
 const texts={
 en:{subtitle:"Advanced SOC Simulation Platform",threat:"Threat Status",risk:"Risk Score",incident:"Incident ID",feed:"Threat Intelligence Feed",stats:"Statistics",ready:"System Ready...",hover:"Type your suspicious message here",safe:"SAFE",medium:"SUSPICIOUS",high:"HIGH RISK"},
 ar:{subtitle:"منصة محاكاة مركز العمليات الأمنية",threat:"حالة التهديد",risk:"نسبة الخطورة",incident:"رقم الحادثة",feed:"التغذية المباشرة للتهديدات",stats:"الإحصائيات",ready:"النظام جاهز...",hover:"اكتبي الرسالة المشبوهة هنا",safe:"آمن",medium:"مشبوه",high:"خطر عالي"}
 };
 
-// ===== القائمة القديمة للكلمات المشبوهة =====
+// القائمة القديمة للكلمات المشبوهة
 const suspiciousWords=[
 "قم بالدخول إلى حسابك","تحديث الحساب","الإجراء المطلوب","فعّل الآن","مضاد للفيروسات",
 "تغيير كلمة المرور","انقر للتحقق","أكد بياناتك","معلومات سرية","سايبر مونداي","اختراق البيانات",
@@ -116,8 +116,7 @@ const suspiciousWords=[
 ];
 
 function setLang(l){
-lang=l;
-document.documentElement.lang=l;
+lang=l;document.documentElement.lang=l;
 document.body.dir=l==="ar"?"rtl":"ltr";
 document.getElementById("subtitle").innerText=texts[l].subtitle;
 document.getElementById("threatLabel").innerText=texts[l].threat;
@@ -130,10 +129,9 @@ document.getElementById("msg").placeholder=texts[l].hover;
 }
 
 function speak(text){
-let utter=new SpeechSynthesisUtterance(text);
-utter.rate=0.9;utter.pitch=1;utter.volume=1;
-utter.lang=lang==="ar"?"ar-SA":"en-US";
-speechSynthesis.cancel();speechSynthesis.speak(utter);
+let u=new SpeechSynthesisUtterance(text);
+u.lang=lang==="ar"?"ar-SA":"en-US";u.rate=0.9;u.pitch=1;u.volume=1;
+speechSynthesis.cancel();speechSynthesis.speak(u);
 }
 
 function generateIncident(){return "INC-"+Date.now().toString().slice(-6);}
@@ -144,36 +142,18 @@ if(t.length<3) return "";
 
 let score=0;
 suspiciousWords.forEach(w=>{
-let regex=new RegExp(w.toLowerCase(),"g");
-let matches=t.match(regex);
-if(matches) score+=matches.length*20; // كل ظهور يزيد الخطورة
+if(t.normalize("NFC").includes(w.toLowerCase())) score+=40;
 });
 
 let links=t.match(/https?:\/\/[^\s]+/g);
-if(links && links.length>0) score+=30;
+if(links) score+=30;
 if(t.includes("bit.ly")||t.includes("tinyurl")) score+=25;
 if(/\b\d{4}[- ]?\d{4}[- ]?\d{4}[- ]?\d{4}\b/.test(t)) score+=35;
 
-let statusText="";
-let bar=document.getElementById("bar");
-
-if(score>=60){
-statusText=texts[lang].high;
-stats.high++;
-document.body.classList.add("alertMode");
-bar.classList.add("alert");
-document.getElementById("alarmSound").play();
-}else if(score>=30){
-statusText=texts[lang].medium;
-stats.medium++;
-document.body.classList.remove("alertMode");
-bar.classList.remove("alert");
-}else{
-statusText=texts[lang].safe;
-stats.safe++;
-document.body.classList.remove("alertMode");
-bar.classList.remove("alert");
-}
+let statusText="",bar=document.getElementById("bar");
+if(score>=60){statusText=texts[lang].high;stats.high++;document.body.classList.add("alertMode");bar.classList.add("alert");document.getElementById("alarmSound").play();}
+else if(score>=30){statusText=texts[lang].medium;stats.medium++;document.body.classList.remove("alertMode");bar.classList.remove("alert");}
+else{statusText=texts[lang].safe;stats.safe++;document.body.classList.remove("alertMode");bar.classList.remove("alert");}
 
 document.getElementById("status").innerText=statusText;
 document.getElementById("score").innerText=score;
@@ -188,10 +168,7 @@ return statusText+" - "+score+"%";
 
 function analyze(){
 clearTimeout(debounceTimer);
-debounceTimer=setTimeout(()=>{
-let result=analyzeMessage();
-if(result) speak(result);
-},700);
+debounceTimer=setTimeout(()=>{let r=analyzeMessage();if(r) speak(r);},700);
 }
 
 document.getElementById("msg").addEventListener("input",analyze);
@@ -199,7 +176,7 @@ document.getElementById("msg").addEventListener("mouseenter",()=>{speak(texts[la
 
 let chart=new Chart(document.getElementById("chart"),{type:'doughnut',data:{labels:['Safe','Suspicious','High'],datasets:[{data:[0,0,0],backgroundColor:['#00ff7f','#ffff33','#ff4d4d']}]}});
 function updateChart(){chart.data.datasets[0].data=[stats.safe,stats.medium,stats.high];chart.update();}
-function exportReport(){let data={platform:"BlackFalcon SOC™",stats:stats,timestamp:new Date()};let blob=new Blob([JSON.stringify(data,null,2)],{type:"application/json"});let a=document.createElement("a");a.href=URL.createObjectURL(blob);a.download="BlackFalcon_Report.json";a.click();}
+function exportReport(){let d={platform:"BlackFalcon SOC™",stats:stats,timestamp:new Date()};let blob=new Blob([JSON.stringify(d,null,2)],{type:"application/json"});let a=document.createElement("a");a.href=URL.createObjectURL(blob);a.download="BlackFalcon_Report.json";a.click();}
 </script>
 </body>
 </html>
