--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ body{
   margin:0;font-family:'Cairo',sans-serif;
   background:#001a00;color:#00ff7f;transition:0.5s;
 }
+body.alertMode{background:#550000 !important;color:#fff !important;}
 header{text-align:center;padding:20px;border-bottom:1px solid #00ff7f33;}
 button{background:#000;color:#00ff7f;border:1px solid #00ff7f;padding:6px 14px;border-radius:8px;cursor:pointer;margin:3px;transition:0.3s;}
 button:hover{background:#00ff7f;color:#000;box-shadow:0 0 20px #00ff7f;}
@@ -27,7 +28,6 @@ textarea:hover{transform:scale(1.02);}
   100%{background:#ff4d4d;width:100%;}
 }
 .log{max-height:150px;overflow:auto;font-size:12px;background:#0a0a0a;padding:10px;border-radius:10px;}
-body.alertMode{background:#550000 !important; color:#fff !important;}
 footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ff7f33;}
 </style>
 </head>
@@ -70,12 +70,14 @@ footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ff7
 </div>
 
 <footer>BlackFalcon SOC™ – Enterprise Simulation Platform</footer>
+
 <audio id="alarmSound"><source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3"></audio>
 
 <script>
 let lang="en";
 let stats={safe:0,medium:0,high:0};
 let debounceTimer=null;
+let hoverSpoken=false; // لمنع تكرار الصوت عند الماوس
 
 const texts={
 en:{subtitle:"Advanced SOC Simulation Platform",threat:"Threat Status",risk:"Risk Score",incident:"Incident ID",feed:"Threat Intelligence Feed",stats:"Statistics",ready:"System Ready...",hover:"Type your suspicious message here",safe:"SAFE",medium:"SUSPICIOUS",high:"HIGH RISK"},
@@ -135,12 +137,22 @@ if(t.length<3) return "";
 
 let score=0;
 suspiciousWords.forEach(w=>{
-if(t.normalize("NFC").includes(w.toLowerCase())) score+=100; // أي كلمة → HIGH
+if(t.normalize("NFC").includes(w.toLowerCase())) score+=100;
 });
 
 let statusText="",bar=document.getElementById("bar");
-if(score>=60){statusText=texts[lang].high;stats.high++;document.body.classList.add("alertMode");bar.classList.add("alert");document.getElementById("alarmSound").play();}
-else{statusText=texts[lang].safe;stats.safe++;document.body.classList.remove("alertMode");bar.classList.remove("alert");}
+if(score>=60){
+    statusText=texts[lang].high;
+    stats.high++;
+    document.body.classList.add("alertMode");
+    bar.classList.add("alert");
+    document.getElementById("alarmSound").play();
+}else{
+    statusText=texts[lang].safe;
+    stats.safe++;
+    document.body.classList.remove("alertMode");
+    bar.classList.remove("alert");
+}
 
 document.getElementById("status").innerText=statusText;
 document.getElementById("score").innerText=score>100?100:score;
@@ -159,12 +171,29 @@ debounceTimer=setTimeout(()=>{analyzeMessage();},700);
 }
 
 document.getElementById("msg").addEventListener("input",analyze);
-document.getElementById("msg").addEventListener("mouseenter",()=>{speak(texts[lang].hover);});
 
-let chart=new Chart(document.getElementById("chart"),{type:'doughnut',data:{labels:['Safe','Suspicious','High'],datasets:[{data:[0,0,0],backgroundColor:['#00ff7f','#ffff33','#ff4d4d']}]}});
+// صوت عند وضع الماوس
+document.getElementById("msg").addEventListener("mouseenter",()=>{
+    if(!hoverSpoken){speak(texts[lang].hover); hoverSpoken=true;}
+});
+document.getElementById("msg").addEventListener("mouseleave",()=>{hoverSpoken=false;});
+
+// Chart
+let chart=new Chart(document.getElementById("chart"),{
+type:'doughnut',
+data:{
+labels:['Safe','Suspicious','High'],
+datasets:[{data:[0,0,0],backgroundColor:['#00ff7f','#ffff33','#ff4d4d']}]
+}
+});
 function updateChart(){chart.data.datasets[0].data=[stats.safe,stats.medium,stats.high];chart.update();}
 
-function exportReport(){let d={platform:"BlackFalcon SOC™",stats:stats,timestamp:new Date()};let blob=new Blob([JSON.stringify(d,null,2)],{type:"application/json"});let a=document.createElement("a");a.href=URL.createObjectURL(blob);a.download="BlackFalcon_Report.json";a.click();}
+// Export
+function exportReport(){
+let d={platform:"BlackFalcon SOC™",stats:stats,timestamp:new Date()};
+let blob=new Blob([JSON.stringify(d,null,2)],{type:"application/json"});
+let a=document.createElement("a");a.href=URL.createObjectURL(blob);a.download="BlackFalcon_Report.json";a.click();
+}
 </script>
 </body>
 </html>
