--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@ body{
   margin:0;font-family:'Cairo',sans-serif;
   background:#001a00;color:#00ff7f;transition:0.5s;
 }
-body.alertMode{background:#550000 !important;color:#fff !important;}
 header{text-align:center;padding:20px;border-bottom:1px solid #00ff7f33;}
-button{background:#000;color:#00ff7f;border:1px solid #00ff7f;padding:6px 14px;border-radius:8px;cursor:pointer;margin:3px;transition:0.3s;}
+button{
+  background:#000;color:#00ff7f;border:1px solid #00ff7f;
+  padding:6px 14px;border-radius:8px;cursor:pointer;margin:3px;
+  transition:0.3s;
+}
 button:hover{background:#00ff7f;color:#000;box-shadow:0 0 20px #00ff7f;}
 .container{max-width:1200px;margin:20px auto;padding:25px;background:rgba(0,20,0,0.9);border-radius:20px;transition:0.3s;}
-textarea{width:100%;height:140px;background:#000;border:2px solid #00ff7f;border-radius:15px;padding:15px;color:#00ff7f;font-size:15px;resize:none;transition:0.3s;}
+textarea{
+  width:100%;height:140px;background:#000;border:2px solid #00ff7f;border-radius:15px;
+  padding:15px;color:#00ff7f;font-size:15px;resize:none;transition:0.3s;
+}
 textarea:focus{outline:none;box-shadow:0 0 20px #00ff7f;}
 textarea:hover{transform:scale(1.02);}
 .card{background:#001a00;padding:20px;border-radius:15px;box-shadow:0 0 20px #00ff7f22;margin-top:15px;transition:0.3s;}
@@ -28,6 +34,7 @@ textarea:hover{transform:scale(1.02);}
   100%{background:#ff4d4d;width:100%;}
 }
 .log{max-height:150px;overflow:auto;font-size:12px;background:#0a0a0a;padding:10px;border-radius:10px;}
+body.alertMode{background:#550000 !important; color:#fff !important;}
 footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ff7f33;}
 </style>
 </head>
@@ -71,21 +78,20 @@ footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ff7
 
 <footer>BlackFalcon SOC™ – Enterprise Simulation Platform</footer>
 
-<!-- صوت التحذير -->
+<!-- الأصوات -->
 <audio id="alarmSound"><source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3"></audio>
+<audio id="hoverSound"><source src="https://assets.mixkit.co/active_storage/sfx/2572/2572-preview.mp3"></audio>
 
 <script>
 let lang="en";
 let stats={safe:0,medium:0,high:0};
 let debounceTimer=null;
 
-// النصوص
 const texts={
 en:{subtitle:"Advanced SOC Simulation Platform",threat:"Threat Status",risk:"Risk Score",incident:"Incident ID",feed:"Threat Intelligence Feed",stats:"Statistics",ready:"System Ready...",hover:"Type your suspicious message here",safe:"SAFE",medium:"SUSPICIOUS",high:"HIGH RISK"},
 ar:{subtitle:"منصة محاكاة مركز العمليات الأمنية",threat:"حالة التهديد",risk:"نسبة الخطورة",incident:"رقم الحادثة",feed:"التغذية المباشرة للتهديدات",stats:"الإحصائيات",ready:"النظام جاهز...",hover:"اكتبي الرسالة المشبوهة هنا",safe:"آمن",medium:"مشبوه",high:"خطر عالي"}
 };
 
-// الكلمات المشبوهة القديمة
 const suspiciousWords=[
 "قم بالدخول إلى حسابك","تحديث الحساب","الإجراء المطلوب","فعّل الآن","مضاد للفيروسات",
 "تغيير كلمة المرور","انقر للتحقق","أكد بياناتك","معلومات سرية","سايبر مونداي","اختراق البيانات",
@@ -112,46 +118,44 @@ const suspiciousWords=[
 "نقدي","مكافأة نقدية","سحب نقدي","كازينو","احصل على خصمك","الدولار","دخل إضافي"
 ];
 
-// اللغة
 function setLang(l){
-lang=l;document.documentElement.lang=l;
-document.body.dir=l==="ar"?"rtl":"ltr";
-document.getElementById("subtitle").innerText=texts[l].subtitle;
-document.getElementById("threatLabel").innerText=texts[l].threat;
-document.getElementById("riskLabel").innerText=texts[l].risk;
-document.getElementById("incidentLabel").innerText=texts[l].incident;
-document.getElementById("feedLabel").innerText=texts[l].feed;
-document.getElementById("statsLabel").innerText=texts[l].stats;
-document.getElementById("feed").innerText=texts[l].ready;
-document.getElementById("msg").placeholder=texts[l].hover;
+  lang=l;document.documentElement.lang=l;
+  document.body.dir=l==="ar"?"rtl":"ltr";
+  document.getElementById("subtitle").innerText=texts[l].subtitle;
+  document.getElementById("threatLabel").innerText=texts[l].threat;
+  document.getElementById("riskLabel").innerText=texts[l].risk;
+  document.getElementById("incidentLabel").innerText=texts[l].incident;
+  document.getElementById("feedLabel").innerText=texts[l].feed;
+  document.getElementById("statsLabel").innerText=texts[l].stats;
+  document.getElementById("feed").innerText=texts[l].ready;
+  document.getElementById("msg").placeholder=texts[l].hover;
 }
 
-// كلام صوت
 function speak(text){
-let u=new SpeechSynthesisUtterance(text);
-u.lang=lang==="ar"?"ar-SA":"en-US";u.rate=0.9;u.pitch=1;u.volume=1;
-speechSynthesis.cancel();speechSynthesis.speak(u);
+  let u=new SpeechSynthesisUtterance(text);
+  u.lang=lang==="ar"?"ar-SA":"en-US";u.rate=0.9;u.pitch=1;u.volume=1;
+  speechSynthesis.cancel();speechSynthesis.speak(u);
 }
 
 function generateIncident(){return "INC-"+Date.now().toString().slice(-6);}
 
-// تحليل الرسالة
 function analyzeMessage(){
   let t=document.getElementById("msg").value.toLowerCase().normalize("NFC");
   if(t.length<3) return;
 
   let score=0;
+  let triggered=false;
 
   suspiciousWords.forEach(w=>{
-    if(t.includes(w.toLowerCase())) score+=100; // أي كلمة → HIGH
+    if(t.includes(w.toLowerCase())) {
+      score+=100;
+      triggered=true;
+    }
   });
 
-  // روابط قصيرة وخطرة
-  if(t.includes("bit.ly") || t.includes("tinyurl")) score +=50;
-  // نموذج إدخال بيانات
-  if(t.includes("<form") || t.includes("input type=")) score +=50;
-  // punycode
-  if(t.includes("xn--")) score +=50;
+  if(t.includes("bit.ly")||t.includes("tinyurl")) score+=50;
+  if(t.includes("<form")||t.includes("input type=")) score+=50;
+  if(t.includes("xn--")) score+=50;
 
   let statusText="";
   let bar=document.getElementById("bar");
@@ -161,8 +165,11 @@ function analyzeMessage(){
     stats.high++;
     document.body.classList.add("alertMode");
     bar.classList.add("alert");
-    let alarm=document.getElementById("alarmSound");
-    alarm.currentTime=0; alarm.play();
+    if(triggered){ 
+      document.getElementById("alarmSound").currentTime=0;
+      document.getElementById("alarmSound").play();
+      speak(statusText+"!");
+    }
   } else if(score>=30){
     statusText=texts[lang].medium;
     stats.medium++;
@@ -183,12 +190,9 @@ function analyzeMessage(){
   document.getElementById("incident").innerText=inc;
   document.getElementById("feed").innerText=statusText+" - "+new Date().toLocaleTimeString();
   document.getElementById("log").innerHTML+=`[${new Date().toLocaleTimeString()}] ${inc} - ${statusText} (${score>100?100:score}%)<br>`;
-
   updateChart();
-  return statusText+" - "+(score>100?100:score)+"%";
 }
 
-// تأخير التحليل لتفادي الصوت مع كل حرف
 function analyze(){
   clearTimeout(debounceTimer);
   debounceTimer=setTimeout(()=>{analyzeMessage();},700);
@@ -197,20 +201,10 @@ function analyze(){
 document.getElementById("msg").addEventListener("input",analyze);
 document.getElementById("msg").addEventListener("mouseenter",()=>{speak(texts[lang].hover);});
 
-// المخطط
-let chart=new Chart(document.getElementById("chart"),{
-  type:'doughnut',
-  data:{labels:['Safe','Suspicious','High'],datasets:[{data:[0,0,0],backgroundColor:['#00ff7f','#ffff33','#ff4d4d']}]}
-});
+let chart=new Chart(document.getElementById("chart"),{type:'doughnut',data:{labels:['Safe','Suspicious','High'],datasets:[{data:[0,0,0],backgroundColor:['#00ff7f','#ffff33','#ff4d4d']}]}});
 function updateChart(){chart.data.datasets[0].data=[stats.safe,stats.medium,stats.high];chart.update();}
 
-// تصدير التقرير
-function exportReport(){
-  let d={platform:"BlackFalcon SOC™",stats:stats,timestamp:new Date()};
-  let blob=new Blob([JSON.stringify(d,null,2)],{type:"application/json"});
-  let a=document.createElement("a");a.href=URL.createObjectURL(blob);
-  a.download="BlackFalcon_Report.json";a.click();
-}
+function exportReport(){let d={platform:"BlackFalcon SOC™",stats:stats,timestamp:new Date()};let blob=new Blob([JSON.stringify(d,null,2)],{type:"application/json"});let a=document.createElement("a");a.href=URL.createObjectURL(blob);a.download="BlackFalcon_Report.json";a.click();}
 </script>
 </body>
 </html>
